unify docker compose, add required dirs per .gitkeep

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-# IPL root dir to mount volumes using absolute paths. 
+# IPL root dir to mount volumes using absolute paths.
 # (I'm not aware of a predefined docker compose var which would make this unnecessary)
 IPL_ROOT_DIR=/srv/docker-unmanaged/ipl/
 
+# UID and GID of the user which should be used to run most services in common uid:gid format. Often something like 1000:1000
+# You can determine your this line with your own uid and gid by `echo "DOCKER_LOCAL_USER=$(shell id -u):$(shell id -g)"`
 DOCKER_LOCAL_USER=1000:1000
 
 # time zone, must be a valid IANA tz database identifier
@@ -56,7 +58,7 @@ IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:2023-12-07t21.
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_USER_AGENT=MobiData-BW
 # This assumes, that the ipl platform is started in a directory `ipl` which's name becomes
-# the docker project name and is prefixed to the `ipl` network defined in docker-compose. 
+# the docker project name and is prefixed to the `ipl` network defined in docker-compose.
 # This var need's to be redefined in e.g. `.env.local` if run from a different dir.
 IPL_GTFS_IMPORTER_NETWORK=ipl_ipl
 
