fix: goaccess: add missing {date,time}-format directives
follow-up of 8e4ccb2

--- a/etc/goaccess.conf
+++ b/etc/goaccess.conf
@@ -12,6 +12,8 @@
 # e.g. `datetime-format %Y-%m-%dT%H:%M:%S.%f%z`
 # We could also filter out the fractional digits before: `jq '.StartUTC |= sub("(?<x>[^.]+).[0-9]+Z"; "\(.x)Z")'`.
 # [1] https://github.com/allinurl/goaccess/issues/2268
+date-format %Y-%m-%d
+time-format %H:%M:%S
 log-format {"DownstreamContentSize":"%b","DownstreamStatus":"%s","Duration":"%n","RequestMethod":"%m","RequestPath":"%U","RequestProtocol":"%H","ServiceName":"%v@docker","StartLocal":"%dT%t.%^","request_User-Agent":"%u","request_X-Real-Ip":"%h"}
 db-path /srv/goaccess/data
 
