fix: .env.local.example: switch $IPL_GTFS_API_PUBLIC_BASE_URL to "api"

--- a/.env.local.example
+++ b/.env.local.example
@@ -30,7 +30,7 @@ VOI_PASSWORD=password
 PGBOUNCER_POSTGRES_PASSWORD=secret
 
 # Base URL of gtfs-api, as seen from the browser/client. Usually the Docker host's DNS name or IP address.
-IPL_GTFS_API_PUBLIC_BASE_URL=https://dev-ipl.mobidata-bw.de/gtfs
+IPL_GTFS_API_PUBLIC_BASE_URL=https://api.mobidata-bw.de/gtfs
 IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGREST_PASSWORD=password
 
