fix: fix graphiql basepath issue

--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -20,6 +20,9 @@ org.entur.lamassu.redis.slave.enabled=false
 
 # graphql starter
 graphql.graphiql.enabled=true
+graphql.graphiql.basePath: /sharing/
+graphql.graphiql.endpoint.graphql: /sharing/graphql
+graphql.graphiql.endpoint.subscriptions: /sharing/subscriptions
 graphql.servlet.actuator-metrics=true
 graphql.servlet.corsEnabled=false
 
