--- a/.env.local.example
+++ b/.env.local.example
@@ -26,6 +26,9 @@ DEER_PASSWORD=password
 VOI_USER=user
 VOI_PASSWORD=password
 
+# Url to the cantamen IXSI service. Note: this service is IP restricted
+CANTAMEN_IXSI_API_URL=http://example.org
+
 # A random password for pgbouncer clients (gtfs-api, geoserver, dagster, etc.)
 PGBOUNCER_POSTGRES_PASSWORD=secret
 
