--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -196,6 +196,7 @@ services:
       - VOI_API_URL
       - VOI_USER=${VOI_USER:?missing/empty}
       - VOI_PASSWORD=${VOI_PASSWORD:?'missing/empty}
+      - CANTAMEN_IXSI_API_URL=${CANTAMEN_IXSI_API_URL:?missing/empty}
     restart: unless-stopped
 
   lamassu:
