--- a/.env.local.example
+++ b/.env.local.example
@@ -14,7 +14,7 @@ LAMASSU_BOLT_CLIENT_ID=client
 LAMASSU_BOLT_CLIENT_PASSWORD=secret
 
 # Credentials for Tier
-LAMASSU_TIER_API_URL=http://url.org
+LAMASSU_TIER_API_URL=http://example.org
 LAMASSU_TIER_USER=user
 LAMASSU_TIER_PASSWORD=secret
 
