--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -192,10 +192,10 @@ services:
     environment:
       - DEER_API_URL
       - DEER_USER=${DEER_USER:?missing/empty}
-      - DEER_PASSWORD=${DEER_PASSWORD:?'missing/empty}
+      - DEER_PASSWORD=${DEER_PASSWORD:?missing/empty}
       - VOI_API_URL
       - VOI_USER=${VOI_USER:?missing/empty}
-      - VOI_PASSWORD=${VOI_PASSWORD:?'missing/empty}
+      - VOI_PASSWORD=${VOI_PASSWORD:?missing/empty}
       - CANTAMEN_IXSI_API_URL=${CANTAMEN_IXSI_API_URL:?missing/empty}
     restart: unless-stopped
 
