fix: goaccess: use X-Forwarded-For instead of X-Real-IP for client IP address

--- a/etc/goaccess.conf
+++ b/etc/goaccess.conf
@@ -14,7 +14,7 @@
 # [1] https://github.com/allinurl/goaccess/issues/2268
 date-format %Y-%m-%d
 time-format %H:%M:%S
-log-format {"DownstreamContentSize":"%b","DownstreamStatus":"%s","Duration":"%n","RequestMethod":"%m","RequestPath":"%U","RequestProtocol":"%H","ServiceName":"%v@docker","StartLocal":"%dT%t.%^","request_User-Agent":"%u","request_X-Real-Ip":"%h"}
+log-format {"DownstreamContentSize":"%b","DownstreamStatus":"%s","Duration":"%n","RequestMethod":"%m","RequestPath":"%U","RequestProtocol":"%H","ServiceName":"%v@docker","StartLocal":"%dT%t.%^","request_User-Agent":"%u","request_X-Forwarded-For":"%h"}
 db-path /srv/goaccess/data
 
 ######################################
