--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,9 +104,6 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.well-known-uris.rule=PathPrefix(`/.well-known/`) || Path(`/robots.txt`)"
-      - "traefik.http.routers.well-known-uris.middlewares=well-known-uris-middleware"
-      - "traefik.http.middlewares.well-known-uris-middleware.headers.accesscontrolallowmethods=GET,OPTIONS,HEAD"
-      - "traefik.http.middlewares.well-known-uris-middleware.headers.accesscontrolallowheaders=*"
       - "traefik.http.services.well-known-uris.loadbalancer.server.port=80"
 
   goaccess:
@@ -174,10 +171,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.caddy.rule=PathPrefix(`/datasets`)"
-      - "traefik.http.routers.caddy.middlewares=caddy-middleware-1,caddy-middleware-2"
+      - "traefik.http.routers.caddy.middlewares=caddy-middleware-1"
       - "traefik.http.middlewares.caddy-middleware-1.stripprefix.prefixes=/datasets"
-      - "traefik.http.middlewares.caddy-middleware-2.headers.accesscontrolallowmethods=GET,OPTIONS,HEAD"
-      - "traefik.http.middlewares.caddy-middleware-2.headers.accesscontrolallowheaders=*"
       - "traefik.http.services.caddy.loadbalancer.server.port=80"
 
   # This service requests non-standard sharing provider APIs and generates
@@ -295,9 +290,6 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.geoserver.rule=PathPrefix(`/geoserver`)"
-      - "traefik.http.routers.geoserver.middlewares=geoserver-middleware"
-      - "traefik.http.middlewares.geoserver-middleware.headers.accesscontrolallowmethods=GET,OPTIONS,HEAD"
-      - "traefik.http.middlewares.geoserver-middleware.headers.accesscontrolallowheaders=*"
       - "traefik.http.services.geoserver.loadbalancer.server.port=8080"
     ports:
       - ${GEOSERVER_PORT}:8080
