chore: gtfs-api: don't listen on DB channel for schema reloading
PostgREST uses a separate long-running (separate) DB connection to listen on a pub/sub channel for instructions to reload its schema (cache). By default, pgbouncer *does not* force-close idle connections on reconfigurations.

Although we recently configured pgbouncer to do so, we don't need this on-demand schema reloading feature anyways, so we turn it off.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -587,6 +587,10 @@ services:
       PGRST_DB_SCHEMAS: api
       PGRST_DB_ANON_ROLE: web_anon
       PGRST_DB_MAX_ROWS: ${IPL_GTFS_API_MAX_ROWS:?missing/empty}
+
+      # > Also set db-channel-enabled to false since LISTEN is not compatible with transaction pooling. Although it should not give any errors if left enabled.
+      # https://postgrest.org/en/stable/references/connection_pool.html#external-connection-poolers
+      PGRST_DB_CHANNEL_ENABLED: 'False'
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.gtfs-api.rule=PathPrefix(`/gtfs`)"
