--- a/.env
+++ b/.env
@@ -43,6 +43,7 @@ DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_DB=postgres_db
 
 # gtfs-db variables
+# built from https://github.com/mobidata-bw/postgis-with-pg-plan-filter
 IPL_GTFS_DB_IMAGE=ghcr.io/mobidata-bw/postgis-with-pg-plan-filter
 IPL_GTFS_DB_POSTGRES_HOST=gtfs-db
 IPL_GTFS_DB_POSTGRES_USER=postgres
