--- a/etc/caddy/Caddyfile
+++ b/etc/caddy/Caddyfile
@@ -8,6 +8,14 @@ http://:80 {
     root * /var/www/datasets
   }
 
+  # well-known URIs (security.txt, favicon.ico, etc.)
+  handle /robots.txt {
+    root * /var/www/well-known
+  }
+  handle_path /.well-known/* {
+    root * /var/www/well-known
+  }
+
   encode zstd gzip
   file_server {
     precompressed gzip zstd
