add park api bahn and pbw

--- a/etc/park-api/config.yaml
+++ b/etc/park-api/config.yaml
@@ -6,6 +6,8 @@ PARK_API_CONVERTER:
   # Karlsruhe currently fails, see https://github.com/ParkenDD/ParkAPI2-sources/issues/40
   # - karlsruhe
   - mannheim
+  - bahn_v2
+  - pbw
 
 OPENAPI_CONTACT_MAIL: 'mobidatabw-technik@nvbw.de'
 OPENAPI_TOS: 'https://www.mobidata-bw.de/pages/nutzungsbedingungen'
