--- a/.env
+++ b/.env
@@ -113,3 +113,7 @@ CADDY_IMAGE=caddy:2.7.5-alpine
 # GoAccess
 GOACCESS_IMAGE=allinurl/goaccess:1.8.1
 GOACCESS_PORT=8082
+
+# SFTP
+SFTP_IMAGE=atmoz/sftp:alpine-3.7
+SFTP_PORT=10022
