--- a/etc/caddy/Caddyfile
+++ b/etc/caddy/Caddyfile
@@ -24,9 +24,10 @@ http://:80 {
     root * /var/www/well-known
   }
 
+  # The brotli (.br) encoding is not included in the standard caddy distribution.
   encode zstd gzip
   file_server {
-    precompressed gzip zstd
+    precompressed gzip zstd br
   }
 }
 
